# zwhisper

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  IDEA.md  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/actions/install-build-deps/: action.yml
.github/workflows/: audit.yml  ci.yml  release.yml
contrib/: README.md  install.sh
contrib/profiles/: parakeet-fast.toml  whisper-meeting.toml
contrib/sway/: zwhisper.conf
contrib/waybar/: style.css  zwhisper.jsonc
crates/zwhisper-cli/: Cargo.toml
crates/zwhisper-cli/profiles/: default.toml
crates/zwhisper-cli/src/: cli.rs  main.rs  profile_commands.rs
crates/zwhisper-cli/src/audio/: devices.rs  error.rs  mod.rs  pipeline.rs  recorder.rs  state.rs  watchdog.rs
crates/zwhisper-cli/src/commands/: audio.rs  backend.rs  history.rs  hotkey.rs  instructions.rs  jobs.rs  mod.rs  model.rs  output.rs  profile.rs  record.rs  status.rs  toggle.rs  transcribe.rs
crates/zwhisper-cli/src/commands/deliver/: mod.rs  sink.rs
crates/zwhisper-cli/src/profile/: commands.rs  embedded.rs  error.rs  loader.rs  mod.rs  schema.rs
crates/zwhisper-cli/src/transcribe/: error.rs  mod.rs  whisper_cpp.rs
crates/zwhisper-cli/tests/: cli.rs  profile.rs  transcribe.rs
crates/zwhisper-core/: Cargo.toml
crates/zwhisper-core/profiles/: meeting.toml
crates/zwhisper-core/src/: gain.rs  lib.rs  node_name.rs
crates/zwhisper-core/src/audio/: devices.rs  error.rs  pipeline.rs  recorder.rs
crates/zwhisper-core/src/profile/: embedded.rs  error.rs  listing.rs  loader.rs  migrations.rs  mod.rs  paths.rs  schema.rs
crates/zwhisper-core/src/secrets/: mod.rs  resolver.rs
crates/zwhisper-core/src/setup/: config.rs  devices.rs  level.rs  mod.rs  volume.rs
crates/zwhisper-core/src/transcribe/: archive_extract.rs  audio_source.rs  bundle_download.rs  config.rs  coordinator.rs  deepgram.rs  discovery.rs  error.rs  mod.rs  model.rs  model_management.rs  models.rs  parakeet.rs  pcm_decode.rs  registry.rs  whisper_cpp.rs
crates/zwhisper-core/tests/: it_deepgram.rs
crates/zwhisper-core/tests/fixtures/: whisper-cpp-segments.json
crates/zwhisper-core/tests/fixtures/audio/: silence-16k-mono.flac  sine-16k-mono.flac  sine-48k-stereo.flac
crates/zwhisper-core/tests/fixtures/deepgram/: diarized_response.json
crates/zwhisper-hotkey/: Cargo.toml
crates/zwhisper-hotkey/src/: active_session.rs  lib.rs  portal.rs  probe.rs  toggle.rs
crates/zwhisper-ipc/: Cargo.toml
crates/zwhisper-ipc/src/: error.rs  history.rs  jobs.rs  lib.rs  profiles.rs  recorder.rs  types.rs
crates/zwhisper-ipc/tests/: daemon_role_wire_freeze.rs  m8_protocol_version.rs  wire_freeze.rs
crates/zwhisper-settings/: Cargo.toml  README.md  checksums.toml
crates/zwhisper-settings/src/: app.rs  checksums.rs  client.rs  config.rs  download.rs  hotkey_signal.rs  main.rs  runtime.rs
crates/zwhisper-settings/src/tabs/: hotkey.rs  models.rs  profile.rs  whisper_cli.rs
crates/zwhisper-settings/tests/: desktop_file.rs
crates/zwhisper-tray/: Cargo.toml
crates/zwhisper-tray/src/: cmd.rs  config.rs  dbus.rs  hotkey.rs  icon.rs  lib.rs  main.rs  pump.rs  session_env.rs  single_instance.rs  state.rs  supervisor.rs  tray.rs  tray_diag.rs  version.rs
crates/zwhisper-tray/src/sink/: clipboard.rs  dispatch.rs  mod.rs  notification.rs
crates/zwhisper-tray/tests/: m8_dispatcher_handshake.rs
crates/zwhisperd/: Cargo.toml
crates/zwhisperd/src/: active_profile.rs  active_session.rs  config.rs  history_service.rs  jobs_service.rs  last_session.rs  lifecycle.rs  main.rs  orphan_recovery.rs  profiles_service.rs  recorder_service.rs  session.rs
crates/zwhisperd/src/history/: mod.rs  reap.rs  writer.rs
crates/zwhisperd/src/jobs/: mod.rs  queue.rs
crates/zwhisperd/tests/: daemon_role.rs  last_session.rs  rpc.rs
crates/zwhisperd/tests/common/: mod.rs
docs/: M0-host-setup.md  M0-plan.md  M0-verification.md  M1-plan.md  M1-verification.md  M2-verification.md  M4-plan.md  M4-verification.md  M5-plan.md  M5-verification.md  M6-plan.md  M7-plan.md  M7-verification.md  RELEASE.md  RFC-daemon-role.md  RFC-mic-setup.md  RFC-type-at-cursor-verification.md  RFC-type-at-cursor.md
docs/M1-verification/: sample.flac.txt
packaging/: README.md  zwhisper-settings.desktop  zwhisper.desktop
packaging/arch/: PKGBUILD  namcap.expected  zwhisper.install
packaging/arch/src/zwhisper-0.1.0/: .gitignore  CHANGELOG.md  Cargo.toml  IDEA.md  LICENSE  deny.toml
packaging/arch/src/zwhisper-0.1.0/.github/: dependabot.yml
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-cli/: Cargo.toml
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-core/: Cargo.toml
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-hotkey/: Cargo.toml
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-hotkey/src/: config.rs  portal.rs  probe.rs
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-ipc/: Cargo.toml
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-settings/: Cargo.toml  models.toml.example
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-tray/: Cargo.toml
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-tray/src/: cmd.rs  hotkey.rs  lib.rs  pump.rs  session_env.rs  state.rs  tray.rs
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-tray/src/sink/: dispatch.rs  mod.rs  notification.rs
packaging/arch/src/zwhisper-0.1.0/crates/zwhisper-tray/tests/: m8_dispatcher_handshake.rs  m8_icon_asset.rs
packaging/arch/src/zwhisper-0.1.0/crates/zwhisperd/: Cargo.toml
packaging/arch/src/zwhisper-0.1.0/dbus/: cz.zajca.Zwhisper1.service
packaging/arch/src/zwhisper-0.1.0/docs/: M1-plan.md  M1-verification.md  M2-plan.md  M3-plan.md  M3-verification.md  M6-verification.md  M7-verification.md  M8-plan.md  M8-verification.md  secrets.toml.example
packaging/arch/src/zwhisper-0.1.0/systemd/: zwhisper-tray.service
packaging/arch/tests/: install_paths.sh  pkgbuild_metadata.sh
scripts/: install-desktop.sh  m0-soak.sh  refresh-checksums.sh
systemd/: zwhisper-deliver.service  zwhisper-tray.service  zwhisperd.service
(+47 files in other folders)
