[workspace]
resolver = "3"
members = [
    "crates/zwhisper-cli",
    "crates/zwhisper-core",
    "crates/zwhisper-hotkey",
    "crates/zwhisper-ipc",
    "crates/zwhisperd",
]
exclude = [
    "crates/zwhisper-settings",
    "crates/zwhisper-tray",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.92"
authors = ["Martin Zajic <martin.zajic@keboola.com>"]
license = "MIT"
repository = "https://github.com/zajca/zwhisper"
homepage = "https://github.com/zajca/zwhisper"
readme = "README.md"
# zwhisper crates are not intended for crates.io. Marking them
# `publish = false` keeps the workspace honest, lets cargo-deny
# treat them as private (which makes `[bans] allow-wildcard-paths`
# accept the workspace-internal `path = "..."` deps), and makes any
# future `cargo publish` a deliberate, opt-in action.
publish = false

[workspace.dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Errors
thiserror = "2"
color-eyre = "0.6"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Audio (M0)
gstreamer = "0.25"
# appsink for the RFC Phase 4 ASR fan-out branch (live 16 kHz mono f32
# PCM pulled off a `tee` while the FLAC branch records natively).
gstreamer-app = "0.25"
tokio = { version = "1", features = ["signal", "rt", "macros", "time", "sync", "process", "io-util", "fs"] }
uuid = { version = "1", features = ["v4"] }

# Paths (XDG)
dirs = "6"

# Async traits + serde + tool discovery (M1)
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"
libc = "0.2"

# Profiles (M2)
toml_edit = { version = "0.25", features = ["serde"] }
include_dir = "0.7"
shellexpand = "3"

# IPC / D-Bus (M3)
zbus = { version = "5.16", default-features = false, features = ["tokio"] }
zvariant = "5.12"
futures-util = "0.3"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }

# Cloud transcription HTTP (M5)
# `default-features = false` keeps reqwest out of `native-tls` / OpenSSL
# linkage. reqwest 0.13 renamed the old `rustls-tls` feature to `rustls`
# (rustls + aws-lc-rs provider + `rustls-platform-verifier`, which trusts
# the OS CA store instead of the dropped bundled `webpki-roots`). This
# still avoids OpenSSL and matches `zwhisper` portability on Linux.
# `stream` enables `Body::wrap_stream` for FLAC upload without buffering
# the full file in RAM (M5-plan DoD #17).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
sha2 = "0.11"

# FLAC -> normalized PCM decode (RFC Phase 2). Pure-Rust so it works in
# the CLI transcribe-only build (no GStreamer): `symphonia` decodes FLAC
# to f32, `rubato` resamples to the ASR rate. `symphonia` default
# features are off so only the FLAC decoder + demuxer are pulled, not
# every codec; `rubato` default `fft_resampler` feature is off (we use
# the async sinc resampler for arbitrary ratios).
symphonia = { version = "0.6", default-features = false, features = ["flac"] }
rubato = { version = "3", default-features = false }

# Archive-based directory-bundle model download (RFC Phase 3). zip is
# lean (deflate only — no aes/bzip2/lzma/zstd default surface); tar +
# flate2 (pure-Rust miniz_oxide) cover tar.gz. xz2/bzip2 are avoided
# deliberately (they bind C libraries).
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

# In-process Parakeet ASR (RFC Phase 5), behind the default-OFF
# `parakeet` feature. `onnx` pulls ONNX Runtime via `ort`; its
# `download-binaries` default fetches the native runtime at build time
# (network + sizeable binary), which is why the feature is opt-in.
transcribe-rs = { version = "0.3.11", default-features = false, features = ["onnx"] }

# Hotkey toggle (M6) — global hotkey via XDG GlobalShortcuts portal.
# `default-features = true` keeps the tokio executor (matches
# `zbus.features = ["tokio"]`). The workspace `rust-version = "1.92"` is
# the MSRV, raised from 1.88 because `gstreamer`/`gstreamer-app` 0.25 and
# `ashpd` 0.13 both require Rust 1.92; the toolchain is stable >=1.92.
ashpd = { version = "0.13", default-features = true, features = ["global_shortcuts"] }
# Pure deserializer for `hotkey.toml` (M6) — `toml_edit` is overkill
# for read-only config and pulls extra surface area.
toml = "1"
notify-rust = { version = "4.11", default-features = false, features = ["z-with-tokio"] }
# RFC-daemon-role Feature 3: the session-bound `zwhisper deliver`
# consumer injects transcripts into the Wayland clipboard. `arboard`
# wraps wl-clipboard/X11 selections behind one cross-backend API; the
# handle must be held for the process lifetime (its C1 invariant) so the
# selection survives until the next paste.
arboard = "3"

# Testing helpers
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# M5 cloud-backend integration tests use wiremock to stub Deepgram REST
# without hitting the real API or burning credit.
wiremock = "0.6"
tracing-test = "0.2"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Baseline
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Things we never want
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "allow"   # CLI uses println, fine
print_stderr = "allow"

# Pedantic items that are too noisy in practice
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
# Pedantic lints disabled either because they fire on the existing
# (working, reviewed) M0–M7 codebase or because clippy 1.95 sharpened
# their false-positive rate. Each entry is intentional, not laziness.
doc_markdown = "allow"             # `MethodCallNotImplemented` etc. in prose
many_single_char_names = "allow"   # FLTK callbacks naturally use `s`/`b`/`w`
similar_names = "allow"            # `started_at` vs `starting_at` style pairs
map_unwrap_or = "allow"            # the M5 retry budget pattern reads cleaner with .map().unwrap_or()
cast_sign_loss = "allow"           # u8 / u32 widening in audio/duration math
cast_precision_loss = "allow"      # u64 → f64 in duration formatters
cast_possible_truncation = "allow" # u64 → u32 frame indices
too_many_lines = "allow"           # async event-loop bodies span >100 lines deliberately
uninlined_format_args = "allow"    # mixed style across older crates; format_args! in macros
unchecked_time_subtraction = "allow" # `Instant::now() - started_at` in already-monotonic paths
duration_suboptimal_units = "allow" # fires widely once MSRV >= 1.92 enables `from_mins`/`from_hours`; `from_secs(3600)` keeps the link to sample-count math explicit in tests
redundant_closure_for_method_calls = "allow" # `.map(|e| e.to_string())` reads better than `.map(ToString::to_string)`
items_after_statements = "allow"   # const ITEM blocks after the doc-comment they belong to
unused_async = "allow"             # async-cargo helpers conform to a trait or zbus signature
manual_checked_ops = "allow"  # the daemon's duration math has explicit fallbacks
format_collect = "allow"           # one-shot CLI status string assembly
naive_bytecount = "allow"          # not a hot path
needless_pass_by_value = "allow"   # M5 retry-budget structs by-value for clarity
ptr_arg = "allow"                  # `&PathBuf` accepted in M2 profile helpers
format_in_format_args = "allow"    # M5 deepgram error rendering nests Display
format_push_string = "allow"       # M2 profile diff renderer appends to String
unnested_or_patterns = "allow"     # `Err(skip @ (FixtureSkip::A | FixtureSkip::B))` reads cleaner
doc_overindented_list_items = "allow"
trailing_empty_array = "allow"
used_underscore_binding = "allow"  # zbus signal_emitter args bound `_emitter` deliberately
manual_let_else = "allow"
unnecessary_trailing_comma = "allow"      # rustfmt re-introduces these on multi-arg macro calls
unnecessary_debug_formatting = "allow"    # `{:?}` on PathBuf is intentional in error formatting
collapsible_if = "allow"                  # MSRV >= 1.88 enables this lint via let-chains; nested `if let` reads clearer in the codebase
collapsible_match = "allow"               # paired with collapsible_if for the same reason

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
