[package]
name = "zwhisper-cli"
description = "zwhisper command-line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "zwhisper"
path = "src/main.rs"

[dependencies]
# M3 narrows the CLI to a thin D-Bus client — `audio` is no longer
# pulled (so `gstreamer` drops out of the dep graph entirely, closing
# DoD #8). `transcribe` stays because `zwhisper transcribe <file>` is
# kept local in M3 (no daemon RPC for transcribe-only yet); the
# transcribe feature pulls `whisper-cli` discovery + tokio process,
# not GStreamer — verified via `cargo tree -p zwhisper-cli`.
zwhisper-core = { path = "../zwhisper-core", default-features = false, features = ["profile", "transcribe"] }
zwhisper-ipc = { path = "../zwhisper-ipc" }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml_edit = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
zbus = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
